# trabajo2

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  main.cpp  run_client.sh
archived/: test_get_menu_client.py
client/: .gitignore  CMakeLists.txt
client/src/: CoreQtAdapter.h  NetworkClientProxy.cpp  NetworkClientProxy.h  NetworkProtocol.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  test_network_proxy.cpp
client/src/logic/: DtoMapper.cpp  DtoMapper.h  OrderSorter.cpp  OrderSorter.h  PriceCalculator.cpp  PriceCalculator.h
client/src/presenter/: CajeroPresenter.cpp  CajeroPresenter.h  CocinaPresenter.cpp  CocinaPresenter.h
client/src/presenter/interfaces/: ICajeroView.h  ICocinaView.h
client/src/tests/: test_presenters_pure.cpp
common/: CMakeLists.txt
common/include/api/: ApiDTOs.h  ICoreSistema.h  Protocolo.h
common/include/core/: Configuracion.h
docs/: DiagramaClases-Core+UI.md  DiagramaEstados.md  DiagramaRed.md  WBS-3-Implementacion.md
docs/Diagramas v.4/: Diagrama Despliegue.md  Diagrama ERD.md  Diagrama de Secuencia.md  DiagramaComponentes.md
include/: Cola.h  ColaThreadSafe.h
include/api/: ApiDTOs.h  ICoreSistema.h  IObservadorCore.h
include/core/: CafeteriaFactory.h  EstadoPedido.h  MenuCafeteria.h  SistemaPedidos.h
include/models/: Administrador.h  Cliente.h  Cocinero.h  Empleado.h  EstadoCancelado.h  EstadoEnCola.h  EstadoEnPreparacion.h  EstadoListo.h  ItemPedido.h  Pedido.h  Persona.h  Producto.h
include/patterns/: DescuentoFijo.h  DescuentoNulo.h  DescuentoPorcentaje.h  IEstrategiaDescuento.h  Observador.h
server/: CMakeLists.txt
server/db/: seed.sql
server/include/: Cola.h  ColaThreadSafe.h  IComandoServidor.h  NetworkProtocol.h  NetworkServer.h
server/include/commands/: CmdAddOrder.h  CmdGetMenu.h
server/include/core/: CafeteriaFactory.h  SistemaPedidos.h
server/include/db/: DatabaseManager.h
server/include/models/: Cliente.h  ItemPedido.h  Pedido.h  Persona.h
server/include/patterns/: EstadoCancelado.h  EstadoEnCola.h  EstadoEnPreparacion.h  EstadoListo.h  IEstadoPedido.h
server/include/repositories/: ClienteRepository.h  PedidoRepository.h  ProductRepository.h
server/src/: CmdAddOrder.cpp  CmdGetMenu.cpp  NetworkServer.cpp  main.cpp
server/src/commands/: CmdGetOrders.cpp  CmdGetOrders.h
server/src/core/: MenuCafeteria.cpp  SistemaPedidos.cpp
server/src/db/: DatabaseManager.cpp
server/src/models/: Cliente.cpp  Empleado.cpp  EstadoCancelado.cpp  EstadoEnCola.cpp  EstadoEnPreparacion.cpp  EstadoListo.cpp  ItemPedido.cpp  Pedido.cpp
server/src/patterns/: DescuentoFijo.cpp
server/src/repositories/: ClienteRepository.cpp  PedidoRepository.cpp  ProductRepository.cpp
src/: Cliente.cpp  Cliente.h  Cocina.cpp  Cocina.h  ItemPedido.cpp  MenuCafeteria.cpp  MenuCafeteria.h  Observador.h  Pedido.cpp  Pedido.h  Producto.cpp  SistemaPedidos.cpp  SistemaPedidos.h  main.cpp
src/core/: CafeteriaFactory.cpp  MenuCafeteria.cpp  SistemaPedidos.cpp
src/models/: Administrador.cpp  Cliente.cpp  Cocinero.cpp  EstadoCancelado.cpp  EstadoEnCola.cpp  EstadoEnPreparacion.cpp  EstadoListo.cpp  ItemPedido.cpp  Pedido.cpp  Persona.cpp  Producto.cpp
src/patterns/: Cocina.cpp  DescuentoFijo.cpp  DescuentoNulo.cpp  DescuentoPorcentaje.cpp
tests/: CMakeLists.txt  test_clienterepository.cpp  test_concurrency.cpp  test_dbmanager.cpp  test_dbmanager_getproductos.cpp  test_factory.cpp  test_integration_system.cpp  test_network_broadcast.cpp  test_network_proxy_async.cpp  test_network_proxy_broadcast_integration.cpp  test_network_proxy_endtoend.cpp  test_network_proxy_orders.cpp  test_network_server_clients.cpp  test_sistemapedidos.cpp  test_sistemapedidos_inicializarmenu.cpp  test_state.cpp  test_strategy.cpp
ui-qt/: CMakeLists.txt
ui-qt/src/: CoreFalso.cpp  CoreFalso.h  CoreQtAdapter.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
